crates/courier-ftp/src/ui/dir_tree/snapshots/courier_ftp__ui__dir_tree__tests__tree_collapsed.snap
---
source: crates/courier-ftp/src/ui/dir_tree/tests.rs
assertion_line: 90
expression: "render(&mut t, false).backend()"
---
"┌ Local tree ──────────────────┐"
"│▾ /                           │"
"│├─▸ etc                       │"
"│├─▸ home                      │"
"│└─▸ usr                       │"
"│                              │"
"│                              │"
"│                              │"
"│                              │"
"└──────────────────────────────┘"
