crates/courier-ftp/src/ui/dir_tree/snapshots/courier_ftp__ui__dir_tree__tests__tree_expanded.snap
---
source: crates/courier-ftp/src/ui/dir_tree/tests.rs
assertion_line: 80
expression: "render(&mut t, true).backend()"
---
"┌ Local tree ──────────────────┐"
"│▾ /                           │"
"│├─▸ etc                       │"
"│├─▾ home                      │"
"││ ├─▾ alice                   │"
"││ │ ├─▸ Documents             │"
"││ │ └─▸ Music                 │"
"││ └─▸ bob                     │"
"│└─▸ usr                       │"
"└──────────────────────────────┘"
