crates/courier-ftp/src/ui/dir_tree/snapshots/courier_ftp__ui__dir_tree__tests__tree_loading.snap
---
source: crates/courier-ftp/src/ui/dir_tree/tests.rs
assertion_line: 73
expression: "render(&mut t, true).backend()"
---
"┌ Remote tree ⠋ ───────────────┐"
"│▾ /                           │"
"│├─▸ home                      │"
"│└─? srv                       │"
"│                              │"
"│                              │"
"│                              │"
"│                              │"
"│                              │"
"└──────────────────────────────┘"
